<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jolastoki</string>
    <string name="activity_area_title">AUKERATU GAIA</string>
    <string name="activity_instructions_title">ARGIBIDEAK</string>
    <string name="area_pairs_title">Juego de las parejas</string>
    <string name="area_quiz_title">Juego de preguntas</string>
    <string name="area_drag_drop_title">Juego de colocar</string>
    <string name="area_color_title">Juego de colorear</string>
    <string name="dialog_level_title">AUKERATU MAILA</string>
    <string name="ranking_title">10 ONENAK</string>
    <string name="dialog_score_title">Zure puntuazioa</string>
    <string name="dialog_score_hint">zure izena</string>
    <string name="dialog_exit_title">Ziur zaude irten nahi duzula?</string>
    <string name="dialog_exit_si">BAI</string>
    <string name="dialog_exit_no">EZ</string>
    <string name="mercado_1_1_title">AUKERATU ERANTZUN ZUZENA</string>
    <string name="mercado_1_1_question">ZEIN JANARIK DITU PROTEINAK?</string>
    <string name="mercado_1_1_answer_1">DILISTAK</string>
    <string name="mercado_1_1_answer_2">OGIA</string>
    <string name="mercado_1_1_answer_3">XERRA</string>
    <string name="mercado_1_1_answer_4">SAGARRA</string>
    <string name="mercado_2_1_question">ZEIN DA LANDARE-JATORRIA DUEN JANARIA?</string>
    <string name="mercado_2_1_answer_1">NATILLAK</string>
    <string name="mercado_2_1_answer_2">KROKETAK</string>
    <string name="mercado_2_1_answer_3">OLIOA</string>
    <string name="mercado_2_1_answer_4">GAZTA</string>
    <string name="mercado_3_1_question">ZEIN JANARI DA ESNEKIA?</string>
    <string name="mercado_3_1_answer_1">TXOKOLATEA</string>
    <string name="mercado_3_1_answer_2">YOGURTA</string>
    <string name="mercado_3_1_answer_3">PATEA</string>
    <string name="mercado_3_1_answer_4">TXORIZOA</string>
    <string name="mercado_x_2_title">MARRAZKIA KOLOREZTATU</string>
    <string name="mercado_3_3_title">ZENBAKIAK KONPARATU, ZEINU EGOKIA HERRESTAN ERAMANEZ</string>
    <string name="mercado_1_3_title">JANARI-PIRAMIDEA ERAIKI</string>
    <string name="mercado_2_3_title">JANARIA DAGOKION TALDEAN KOKATU</string>
    <string name="parque_1_1_question">ASMA EZAZU ZER LETRAK BIDAIATZEN DUEN, BETI, AUTOBUSEZ, BIZIKLETAZ, ITSASOAN BARRENA ONTZIAN ETA UNIBERTSOAN ZEHAN KOHETEAN</string>
    <string name="parque_1_1_title">ASMAKIZUNAK</string>
    <string name="parque_x_2_title">BATUKETAK ETA KENKETAK</string>
    <string name="parque_1_2_bt1">8</string>
    <string name="parque_1_2_bt2">11</string>
    <string name="parque_1_2_bt3">0</string>
    <string name="parque_1_2_bt4">7</string>
    <string name="parque_1_2_bt5">1</string>
    <string name="parque_2_2_bt1">2</string>
    <string name="parque_2_2_bt2">9</string>
    <string name="parque_2_2_bt3">77</string>
    <string name="parque_2_2_bt4">58</string>
    <string name="parque_2_2_bt5">93</string>
    <string name="parque_3_2_bt1">83</string>
    <string name="parque_3_2_bt2">18</string>
    <string name="parque_3_2_bt3">772</string>
    <string name="parque_3_2_bt4">933</string>
    <string name="parque_3_2_bt5">585</string>
    <string name="parque_1_3_title">KOKATU IRUDI HAUEK</string>
    <string name="parque_3_3_title">BILATU IRUDI GEOMETRIKO HAUEK MARRAZKIAN</string>
    <string name="parque_2_3_title">ZENBAT ANGELU DITU IRUDI HONEK?</string>
    <string name="parque_2_1_question">KALEAN BIZI NAIZ. ETA OSO ARGALA NAIZ. HIRU KOLORE DITUT BEGIETAN: HORIA, GORRIA ETA BERDEA.</string>
    <string name="parque_3_1_question">ANIMALIA ORNODUNA GIZAKIAREN LAGUNA ASKOTAN EHIZTARIA ETA ITSUEN LAGUNGARRIA.</string>
    <string name="motivacion_text">OSO ONDO!!!\nLORTU DUZU!!!</string>
    <string name="dialog_timout_message">DENBORA AGORTU DA</string>
    <string name="prisma">PRISMA</string>
    <string name="cubo">CUBO</string>
    <string name="cilindro">CILINDRO</string>
    <string name="esfera">ESFERA</string>
    <string name="piramide">PIRAMIDE</string>
    <string name="charca_title_1_1">KONTRAKO HITZAK LOTU</string>
    <string name="charca_title_2_1">ANIMALIA BAKOITZA DAGOKION EZAUGARRIAREKIN LOTU</string>
    <string name="charca_title_3_1">ANTZEKO HITZAK LOTU</string>
    <string name="charca_x_3_title">SEGIDA DAGOKION FITXAREKIN OSATU</string>
    <string name="charca_1_1_bt_1">POLITA</string>
    <string name="charca_1_1_bt_2">ITXITA</string>
    <string name="charca_1_1_bt_3">TXIKIA</string>
    <string name="charca_1_1_bt_4">ZABALIK</string>
    <string name="charca_1_1_bt_5">HANDIA</string>
    <string name="charca_1_1_bt_6">ITSUSIA</string>
    <string name="charca_2_1_bt_1">AZERIA</string>
    <string name="charca_2_1_bt_2">INURRIA</string>
    <string name="charca_2_1_bt_3">MALTZURRA</string>
    <string name="charca_2_1_bt_4">LANGILEA</string>
    <string name="charca_2_1_bt_5">TXAKURRA</string>
    <string name="charca_2_1_bt_6">LEIALA</string>
    <string name="charca_3_1_bt_1">OIHUKA</string>
    <string name="charca_3_1_bt_2">KOBAZULO</string>
    <string name="charca_3_1_bt_3">HASERRE</string>
    <string name="charca_3_1_bt_4">MUTURKA</string>
    <string name="charca_3_1_bt_5">HAIZPE</string>
    <string name="charca_3_1_bt_6">TXILIOKA</string>
    <string name="charca_x_2_title">ESALDIA BUKATU</string>
    <string name="charca_1_2_bt1">DUGU</string>
    <string name="charca_1_2_bt2">DUT</string>
    <string name="charca_1_2_bt3">DU</string>
    <string name="charca_1_2_bt4">DUZUE</string>
    <string name="charca_1_2_bt5">DUTE</string>
    <string name="charca_1_2_bt6">DUZU</string>
    <string name="charca_1_2_target1">NIK SALTO EGITEN</string>
    <string name="charca_1_2_target2">ZUK SALTO EGITEN</string>
    <string name="charca_1_2_target3">HARK SALTO EGITEN</string>
    <string name="charca_1_2_target4">GUK SALTO EGITEN</string>
    <string name="charca_1_2_target5">ZUEK SALTO EGITEN</string>
    <string name="charca_1_2_target6">HAIEK SALTO EGITEN</string>
    <string name="charca_2_2_bt1">ZUTEN</string>
    <string name="charca_2_2_bt2">GENUEN</string>
    <string name="charca_2_2_bt3">ZENUTEN</string>
    <string name="charca_2_2_bt4">ZUEN</string>
    <string name="charca_2_2_bt5">NUEN</string>
    <string name="charca_2_2_bt6">ZENUEN</string>
    <string name="charca_2_2_target1">NIK SALTO EGIN</string>
    <string name="charca_2_2_target2">ZUK SALTO EGIN</string>
    <string name="charca_2_2_target3">HARK SALTO EGIN</string>
    <string name="charca_2_2_target4">GUK SALTO EGIN</string>
    <string name="charca_2_2_target5">ZUEK SALTO EGIN</string>
    <string name="charca_2_2_target6">HAIEK SALTO EGIN</string>
    <string name="charca_3_2_bt1">DUGU</string>
    <string name="charca_3_2_bt2">DUT</string>
    <string name="charca_3_2_bt3">DU</string>
    <string name="charca_3_2_bt4">DUZUE</string>
    <string name="charca_3_2_bt5">DUTE</string>
    <string name="charca_3_2_bt6">DUZU</string>
    <string name="charca_3_2_target1">NIK SALTO EGINGO</string>
    <string name="charca_3_2_target2">ZUK SALTO EGINGO</string>
    <string name="charca_3_2_target3">HARK SALTO EGINGO</string>
    <string name="charca_3_2_target4">GUK SALTO EGINGO</string>
    <string name="charca_3_2_target5">ZUEK SALTO EGINGO</string>
    <string name="charca_3_2_target6">HAIEK SALTO EGINGO</string>
    <string name="biblioteca_1_title">ZENBAKIAK TXIKIENETIK HANDIENERA ANTOLATU</string>
    <string name="biblioteca_2_title">MARRAZKI BAKOITZA DAGOKION TOKIAN KOKATU</string>
    <string name="biblioteca_1_3_title">LETRAK LEKU EGOKIAN IPINI</string>
    <string name="biblioteca_1_2_target4">EGUZKITAKO \nBETAURREKOAK</string>
    <string name="biblioteca_1_2_target6">SANDALIAK</string>
    <string name="biblioteca_1_2_target2">BAINUJANTZIA</string>
    <string name="biblioteca_1_2_target3">ELASTIKOA</string>
    <string name="biblioteca_1_2_target1">TXANOA</string>
    <string name="biblioteca_1_2_target8">BUFANDA</string>
    <string name="biblioteca_1_2_target5">BOTAK</string>
    <string name="biblioteca_1_2_target7">BEROKIA</string>
    <string name="biblioteca_2_2_target3">HELIKOPTEROA</string>
    <string name="biblioteca_2_2_target1">HEGAZKINA</string>
    <string name="biblioteca_2_2_target7">ITSASONTZIA</string>
    <string name="biblioteca_2_2_target4">MOTOA</string>
    <string name="biblioteca_2_2_target5">GLOBOA</string>
    <string name="biblioteca_2_2_target6">AUTOBUSA</string>
    <string name="biblioteca_2_2_target2">BIZIKLETA</string>
    <string name="biblioteca_2_2_target8">TRENA</string>
    <string name="biblioteca_3_2_target2">LEHOIA</string>
    <string name="biblioteca_3_2_target3">ERRINOZEROA</string>
    <string name="biblioteca_3_2_target7">DORTOKA</string>
    <string name="biblioteca_3_2_target5">SUGEA</string>
    <string name="biblioteca_3_2_target8">JIRAFA</string>
    <string name="biblioteca_3_2_target1">TXIMINOA</string>
    <string name="biblioteca_3_2_target4">UNTXIA</string>
    <string name="biblioteca_3_2_target6">ELEFANTEA</string>
    <string name="biblioteca_2_3_title">ERANSKAILUAK LEKU EGOKIAN IPINI</string>
    <string name="biblioteca_3_3_title">ERANSKAILUAK LEKU EGOKIAN IPINI</string>
    <string name="biblioteca_2_3_title1">ZENTZUMENAK</string>
    <string name="biblioteca_2_3_title2">EGUNERO \nEGITEKOAK</string>
    <string name="biblioteca_2_3_title3">GAUZAK</string>
    <string name="biblioteca_2_3_ikusi">IKUSI</string>
    <string name="biblioteca_2_3_entzun">ENTZUN</string>
    <string name="biblioteca_2_3_ukitu">UKITU</string>
    <string name="biblioteca_2_3_jan">JAN</string>
    <string name="biblioteca_2_3_usaindu">USAINDU</string>
    <string name="texto_instrucciones">
        <![CDATA[
        
        <p>
	Jolastoki Android gailuentzat eta guztiz dohainik den aplikazio sinple bat da.
<br/>
	Lehen Hezkuntzako 1. zikloko ikasleei zuzenduta dago.
</p>
<p>
		Euskaraz dauden 36  joko erraz eta dibertigarriz eta arrazonamendua, intuizioa eta sormena suspertzen dituen ingurunearen ezaguera, matematika eta hizkuntza edukiez osaturik dago.
</p>
<p>
		Aplikazio honekin haurrek jolastuz ikasiko dute!
</p>
<p>
		HASI JOSASTEN!
</p>
<p>
		Jolasten hasteko lehenengo jolas eremu bat aukeratu beharko duzu (merkatua, parkea, liburutegia edo urmaela). Ondoren, zailtasun maila aukeratu (1= erraza, 2=erdi mailakoa, 3=zaila).
</p>
<p>
		Hasi zaitezke jolasean!
</p>
<p>
		Partida bakoitza 3 joko desberdinez  osaturik egongo da. Oso garrantzitsua da joko bakoitzaren enuntziatua ondo irakurtzea,  honela, modu egokian egin ahal izateko. Joko guztiek denbora tarte bat izango dute hauek burutu ahal izateko. Azkarra izan behar zara!
</p>
<p>
		JOKO MOTAK:
</p>
<strong>Galdera jokoa:</strong> erantzun egokia aukeratu.<br/> 
<strong>Bikote jokoa:</strong> erlazioa duten elementuak parekatu.<br/>  
<strong>Segida jokoa:</strong> elementuak ordenean kokatu.<br/> 
<strong>Elkartze jokoa:</strong> kontzeptuak erlazionatu, kontrakoak, koloreak, objektuak zenbatu, ...<br/> 
<strong>Margotzeko jokoa:</strong> area desberdinak adierazitako kolorearekin margotu.<br/>
<strong>Asmakizun jokoa:</strong> erantzun egokia aukeratuz igarkizuna asmatu.<br/> 

<p>
		PUNTUAZIOA:
</p>
<p>
		Joko guztiek denbora finko bat izango dute hauek burutu ahal izateko eta erabilitako denboraren araberakoa izango da azken puntuaketa. Zenbat eta lehenago egin orduan eta puntu gehiago izango dituzu.
</p>
<p> 
		Denbora bukatzen bada eta jokoa amaitu ez baduzu, puntuazioa zero izango da.
</p>
<p>
		Azken puntuazioa Ranking pantaila batean agertuko da, bertan zure puntuazioa gorde ahal izango duzularik eta hoberenak diren 10 puntuazioen zerrenda ikusi ahal izango duzularik.
</p>
<p>
		Anima zaitez eremu eta maila guztietan jolastera!
</p>
<br/>
        
        ]]>
</string>

</resources>