<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background_front"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mercado_1_1_fondo"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="100dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/mercado_1_1_cajaquizz"
        android:orientation="vertical" >

        <eu.lapecera.jolastoki.widget.TypographyTextView
            style="@style/normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/mercado_2_1_question" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <eu.lapecera.jolastoki.widget.TypographyButton
                android:id="@+id/mercado_1_1_answer_1"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/mercado_1_1_bt_ko"
                android:gravity="center"
                android:text="@string/mercado_2_1_answer_1" />

            <eu.lapecera.jolastoki.widget.TypographyButton
                android:id="@+id/mercado_1_1_answer_2"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/mercado_1_1_bt_ko"
                android:gravity="center"
                android:text="@string/mercado_2_1_answer_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <eu.lapecera.jolastoki.widget.TypographyButton
                android:id="@+id/mercado_1_1_answer_3"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/mercado_1_1_bt_ok"
                android:gravity="center"
                android:text="@string/mercado_2_1_answer_3" />

            <eu.lapecera.jolastoki.widget.TypographyButton
                android:id="@+id/mercado_1_1_answer_4"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/mercado_1_1_bt_ko"
                android:gravity="center"
                android:text="@string/mercado_2_1_answer_4" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>