<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background_front"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/mercado_1_1_fondo"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/mercado_1_1_cajaquizz"
        android:orientation="vertical" >

        <eu.lapecera.jolastoki.widget.TypographyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mercado_x_1_question_margin"
            android:gravity="center"
            android:text="@string/mercado_1_1_question"
            style="@style/normalText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <eu.lapecera.jolastoki.widget.TypographyButton
                android:id="@+id/mercado_1_1_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mercado_x_1_answer_margin"
                android:background="@drawable/mercado_1_1_bt_ko"
                android:gravity="center"
                android:text="@string/mercado_1_1_answer_1"
                style="@style/normalText" />

            <eu.lapecera.jolastoki.widget.TypographyButton
                android:id="@+id/mercado_1_1_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mercado_x_1_answer_margin"
                android:background="@drawable/mercado_1_1_bt_ko"
                android:gravity="center"
                android:text="@string/mercado_1_1_answer_2"
                style="@style/normalText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <eu.lapecera.jolastoki.widget.TypographyButton
                style="@style/normalText"
                android:id="@+id/mercado_1_1_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mercado_x_1_answer_margin"
                android:background="@drawable/mercado_1_1_bt_ok"
                android:gravity="center"
                android:text="@string/mercado_1_1_answer_3"/>

            <eu.lapecera.jolastoki.widget.TypographyButton
                style="@style/normalText"
                android:id="@+id/mercado_1_1_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mercado_x_1_answer_margin"
                android:background="@drawable/mercado_1_1_bt_ko"
                android:gravity="center"
                android:text="@string/mercado_1_1_answer_4"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>