<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/parque_2_fondo"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/parque_x_2_question_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/parque_2_etiqueta"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parque_x_2_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <Button
                android:id="@+id/parque_x_2_bt_target"
                style="@style/bigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/parque_2_circulo_acierto"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/parque_x_2_bt2"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:layout_toLeftOf="@id/parque_x_2_question_container"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_1_2_bt2" />

    <Button
        android:id="@+id/parque_x_2_bt1"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:layout_toLeftOf="@id/parque_x_2_bt2"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_1_2_bt1" />

    <Button
        android:id="@+id/parque_x_2_bt5"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_1_2_bt5" />

    <Button
        android:id="@+id/parque_x_2_bt4"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:layout_toLeftOf="@id/parque_x_2_bt5"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_1_2_bt4" />

    <Button
        android:id="@+id/parque_x_2_bt3"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_marginRight="30dp"
        android:layout_toLeftOf="@id/parque_x_2_bt4"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_1_2_bt3" />

</RelativeLayout>