<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/parque_2_fondo"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/parque_x_2_question_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/parque_x_2_question_container_margin_right"
        android:layout_marginRight="@dimen/parque_x_2_question_container_margin_right"
        android:layout_marginTop="@dimen/parque_x_2_question_container_margin_top"
        android:gravity="center"
        android:orientation="vertical" >
        
        <ImageView 
            android:id="@+id/etiqueta"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@drawable/parque_2_etiqueta"/>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/parque_x_2_target"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/parque_x_2_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etiqueta"
                android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/parque_x_2_target_padding"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter"
                android:src="@drawable/parque_2_circuloetiqueta" />

            <Button
                android:id="@+id/parque_x_2_bt_target"
                style="@style/bigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/parque_2_circulo_acierto"
                android:visibility="invisible" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/parque_x_2_bt2"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/parque_x_2_button2_margin_right"
        android:layout_marginTop="@dimen/parque_x_2_button2_margin_top"
        android:layout_toLeftOf="@id/parque_x_2_question_container"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_3_2_bt2" />

    <Button
        android:id="@+id/parque_x_2_bt1"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/parque_x_2_button1_margin_right"
        android:layout_marginTop="@dimen/activity_game_score_and_time_width"
        android:layout_toLeftOf="@id/parque_x_2_bt2"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_3_2_bt1" />

    <Button
        android:id="@+id/parque_x_2_bt5"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_3_2_bt5" />

    <Button
        android:id="@+id/parque_x_2_bt4"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/parque_x_2_button4_margin_bottom"
        android:layout_marginLeft="@dimen/parque_x_2_button4_margin_right"
        android:layout_toRightOf="@+id/parque_x_2_bt3"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_3_2_bt4" />

    <Button
        android:id="@+id/parque_x_2_bt3"
        style="@style/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/parque_x_2_button3_margin_right"
        android:layout_below="@id/parque_x_2_bt1"
        android:background="@drawable/parque_2_circulo_normal"
        android:text="@string/parque_3_2_bt3" />

</RelativeLayout>